# Parappa-The-Rapper

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  THIRDPARTYLICENSE
res/: PaperPup.rc
src/: Engine.cpp  Engine.h  LuaController.cpp  LuaController.h  Pack.cpp  Pack.h  PaperPup.cpp  PaperPup.h
src/Menu/: Menu.cpp  Menu.h
src/Platform/: Audio.h  Data.h  Filesystem.h  Input.h  Platform.h  Render.h  Userdata.h
src/Platform/Common/: ADPCM.h  Binary.h  IntArchive.h  Mode2.h  Userdata.h
src/Platform/Miniaudio/: Audio.cpp  Audio.h
src/Platform/Win32/: Data.h  Filesystem.cpp  Filesystem.h  Input.cpp  Input.h  Render.cpp  Render.h  Userdata.cpp  Userdata.h  Win32.cpp  Win32.h  Win32.manifest
